style.css
* {
    font-family: 'Roboto', sans-serif;
}

body {
    background: white;
    margin: 0;
}

.container-top {
    /* background-cover: url('https://i.pinimg.com/originals/3b/de/44/3bde44fdd38d4fdf99fec7aa272ef1d1.gif'); */
    /* background-repeat: no-repeat; */
    min-height: 100vh;
    background: url("https://i.pinimg.com/originals/3b/de/44/3bde44fdd38d4fdf99fec7aa272ef1d1.gif");
    background-repeat: no-repeat;
    background-size: cover;
    width: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    padding: 0;
    
}

.container-top div {
    display: flex;
    flex-flow: column;
    justify-content: center;
    color: white;
    text-transform: uppercase;
    text-align: center;
}

.container-top div h1 {
    font-weight: 900;
    font-size: 4rem;
    letter-spacing: 0.3rem;
}

.container-top div h3 {
    font-weight: 400;
    font-size: 2rem;
}

nav {
    background-color: #343a40;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 0 2.5rem;
    height: 4.5rem;
}

nav a {
    color: white;
    text-decoration: none;
    text-transform: uppercase;
    padding: 1rem;
}

nav a:hover{
    background-color: grey;
    border-radius: 1rem;
}

.container-intropara {
    font-size: 3rem;
    padding: 4rem 6rem;
    margin: 3rem;
    text-align: center;
}

.container-intropara p {
    font-weight: 400;
    line-height: 2;
    color: grey;
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
}

#title {
    font-size: 4rem;
    color: black;
}

.line {
    margin: 2rem 5rem;
}

.container-allimages {
    display: flex;
    flex-flow: row wrap;
    justify-content: left;
    margin: 1rem 4rem;
}

.container-images {
    padding: 1rem;
    font-weight: 400;
    margin: 1rem 0;
}

.container-images h4 {
    text-transform: uppercase;
    font-size: 1.5rem;
    margin: 1.5rem 1rem;
    font-weight: 400;
}

.container-images p {
    color: grey;
    line-height: 2;
}

.container-images img {
    width: 22rem;
    height: 14rem;
    border-radius: 1rem;
    display: block;
    border: 1px solid lightgrey;
    margin: 1rem 1rem;
    transition: all .2s ease-in-out;
}

.container-images img:hover { 
    transform: scale(1.025); 
}

.container-images a {
    text-decoration: none;
    color: black;
    /* display: block; */
    margin: 2rem 2rem 1.5rem 1rem;
}

.container-images a:hover {
    background-color: lightgray;
    border-radius: 0.5rem;
}

.banner p {
    color: grey;
    margin: 0 4.5rem;
}

.banner a {
    color: black;
    text-decoration: none;
}

.footer {
    display: flex;
    justify-content: center;
    margin: 2rem 0 4rem 0;
}

.footer i {
    font-size: 3rem;
    color: black;
    margin: 0 1rem;
}

@media only screen and (max-width: 600px) {
    body {
      background-color: white;
    }

    .container-top div h1 {
        font-size: 3rem;
    }

    .container-intropara {
        padding: 0;
    }

    .container-allimages {
        display: flex;
        flex-flow: row wrap;
        justify-content: left;
        margin: 0rem 0rem;
    }

    .container-images img {
        width: 16rem;
        height: 11rem;
        margin: 1rem auto;
    }

    #title {
        font-size: 3rem;
    }

    .container-images {
        margin: 1.5rem auto;
        padding: 0;
    }
  }

